added debug echoes in test script